Fixes spacing on marketing page.

--- a/web/static/css/marketing.scss
+++ b/web/static/css/marketing.scss
@@ -24,7 +24,7 @@ $footer-height: (2 * $footer-vertical-padding) + $footer-line-height;
   border-bottom: $base-border;
   padding: 0 1.5rem 5rem;
 
-  @media($screen-sm-min) {
+  @media ($screen-sm-min) {
     margin-bottom: $footer-height;
     min-height: calc(100vh - #{$footer-height});
     padding-bottom: 10rem;
@@ -42,8 +42,12 @@ main {
 }
 
 h4 {
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   margin-top: 1rem;
+
+  + p {
+    margin-top: 0;
+  }
 }
 
 dt {
@@ -396,7 +400,7 @@ hr {
   text-align: center;
 
   &_p {
-    margin-top: 1rem;;
+    margin-top: 1rem;
   }
 
   &_pics {
@@ -416,7 +420,7 @@ hr {
     }
   }
 
-  @media($screen-sm-min) {
+  @media ($screen-sm-min) {
     display: flex;
     text-align: left;
 
